[package]
name = "mount-watch"
version = "0.1.0"
edition = "2024"
description = "Get notified when a filesystem is mounted/unmounted"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
mio = { version = "1.0.4", features = ["os-poll", "os-ext"] }
thiserror = "2.0.12"
timerfd = "1.6.0"

[dev-dependencies]
env_logger = "0.11.8"
pretty_assertions = "1.4.1"
