[package]
name = "mount-watcher"
version = "0.3.0"
edition = "2021"
description = "Get notified when a filesystem is mounted/unmounted"
rust-version = "1.71"
license = "Apache-2.0"
repository = "https://github.com/TheElectronWill/rust-mount-watcher/"

[dependencies]
log = "0.4.27"
mio = { version = "1.0.4", features = ["os-poll", "os-ext"] }
thiserror = "2.0.12"
timerfd = "1.6.0"

[dev-dependencies]
env_logger = "0.11.8"
pretty_assertions = "1.4.1"
